# face-cropper

./: notes.md  objective.md  todo.md  todo.txt
.cursor/rules/: frontend.mdc  project.mdc
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: image_processor.py
backend/face_detection_cropping_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_image_processor.py
docs/: market_research.md
frontend/: .env.production  .gitignore  Makefile  openapi-ts.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/credits/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: credits-counter.tsx  docs-popup.tsx  image-preview.tsx  image-processing-settings.tsx  image-upload-area.tsx  nav-bar.tsx  processed-images-grid.tsx  theme-toggle.tsx
frontend/components/ui/: toast.tsx  use-toast.ts
frontend/hooks/: use-image-processing.ts
frontend/lib/: openapi.json
frontend/lib/api/: client.ts  sdk.gen.ts  types.gen.ts
