# NOTE: This file was partially generated using AI assistance.
[project]
name = "face-detection-cropping-backend"
version = "0.1.0"
description = "Face detection and cropping API service"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "opencv-python>=4.11.0.86",
    "pillow==8.2.0",
    "aiofiles==23.2.1",
    "python-jose[cryptography]==3.3.0",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
]
